--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/nevan-dsouza/team-generator/issues"
   },
-  "homepage": "https://github.com/nevan-dsouza/team-generator#readme"
+  "homepage": "https://github.com/nevan-dsouza/team-generator#readme",
+  "dependencies": {
+    "inquirer": "^8.2.0",
+    "jest": "^27.5.1"
+  }
 }
